# xrplpers

./: README.md  setup.cfg
test/: fixture_signed_mint_transaction.json  fixture_submitted_mint_transaction.json  test_NFToken.py  test_nft_NFTokenListHelper.py  test_nft_TransferFee.py  test_nft_token.py  test_nft_tokenid.py  test_verification.py
xrplpers/: verification.py
xrplpers/nfts/: entities.py
xrplpers/xumm/: transactions.py
