[metadata]
name = xrplpers
version = attr: xrplpers.__version__
description = Helper functions for interacting with XRPL
author = Simon Metson
author_email = simon@audiotarky.com
license = Apache License 2.0
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
long_description_content_type = text/markdown
long_description = file: README.md

[options]
include_package_data = True
packages = find:
install_requires =
    xrpl-py

[options.packages.find]
exclude =
    test.*
    test
    demo

[bdist_wheel]
universal = 1

[options.extras_require]
dev =
    black
    mypy
    types-requests
    setuptools
    wheel
    twine
